[tool.poetry]
name = "itospy"
version = "0.1.0"
description = "Port of iTOS from R."
authors = ["Paul Rosenbaum", "Bob Wilson <bob.wilson@convexanalytics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.2"
scipy = "^1.16.1"
networkx = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
